Ships shown on UI next add attacking functionality

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: large;
 }
 
 .comp-side{
@@ -65,6 +66,13 @@ body{
 .grid-elem{
     background-color: var(--backgrnd);
     border-radius: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+.comp-grid > .grid-elem:hover{
+    background-color: yellowgreen;
 }
 
 .player-grid, .comp-grid{
@@ -76,3 +84,8 @@ body{
     grid-template-rows: repeat(10,1fr);
     gap:1%;
 }
+
+.ship-coord{
+    background-color: black;
+}
+
