Fixed issue multiple ships - a sigle click placed multiple ship on the grid - the array containing the possible postions was not getting rid of unneccessary values; - removed all elements from the array in mouseleave

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,7 +87,7 @@ body{
 }
 
 .ship-coord{
-    background-color: black;
+    background-color: black !important;
 }
 
 .missed{
@@ -177,8 +177,24 @@ body{
   }
 /* Swtich ends here */
 
+.switcher{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+}
+
 
 
 .possible_ship{
     opacity: 0.5;
+}
+
+.right-side{
+    display: flex;
+    flex-direction: column;
+    gap:20%;
+}
+.instructions{
+    text-align: center;
 }
