--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ body{
 }
 
 .game-container{
-    height: 70%;
+    height: 80%;
     width: 60%;
     display: flex;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -95,7 +95,7 @@ body{
 }
 
 .hit{
-    background-color: var(--hit);
+    background-color: var(--hit) !important;
 }
 .set-ships{
     display: flex;
@@ -197,4 +197,21 @@ body{
 }
 .instructions{
     text-align: center;
+}
+
+
+.start-game{
+    background-color: var(--txt);
+    color: var(--backdrop);
+    font-family: 'Anton';
+    font-size: xx-large;
+    margin-bottom: 2%;
+    border: none;
+    padding: 0% 1%;
+    transition: all 0.3s ease;
+}
+
+.start-game:hover{
+    background-color: var(--backdrop);
+    color: var(--txt);
 }
