--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
     --backdrop: #001d3d;
     --backgrnd:#003566;
     --txt: #ffd60a;
-    --hit: 	#ff5a00;
+    --hit: 	#ff220c;
 }
 
 
@@ -42,11 +42,16 @@ body{
     font-size: large;
 }
 
+.placeships-heading{
+    font-weight: normal;
+
+}
+
 .comp-side{
     padding: 1%;
     background-color: var(--backdrop);
-    height: 60%;
-    width: 70%;
+    height: 70%;
+    width: 80%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -54,8 +59,8 @@ body{
 .player-side{
     padding: 1%;
     display: flex;
-    height: 60%;
-    width: 70%;
+    height: 70%;
+    width: 80%;
     background-color: var(--backdrop);
     align-items: center;
     flex-direction: column;
@@ -72,8 +77,12 @@ body{
     justify-content: center;
     cursor: pointer;
 }
+
+
 .comp-grid > .grid-elem:hover{
     background-color: yellowgreen;
+    transform: scale(1.10);
+
 }
 
 .player-grid, .comp-grid, .ships-grid{
@@ -87,8 +96,10 @@ body{
 }
 
 .ship-coord{
-    background-color: black !important;
+
+    background-color: grey !important;
 }
+
 
 .missed{
     background-color: var(--txt);
@@ -197,10 +208,11 @@ body{
 }
 .instructions{
     text-align: center;
+    font-weight: normal;
 }
 
 
-.start-game{
+.start-game, .replay-btn{
     background-color: var(--txt);
     color: var(--backdrop);
     font-family: 'Anton';
@@ -211,7 +223,8 @@ body{
     transition: all 0.3s ease;
 }
 
-.start-game:hover{
+.start-game:hover, .replay-btn:hover{
     background-color: var(--backdrop);
     color: var(--txt);
 }
+
